<resources>
    <string name="app_name">EspressoTest</string>
    <string name="welcome_success">Welcome, Task is Successful</string>
</resources>
